--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -29,7 +29,7 @@ $shadow: 2px 2px 20px rgba(152, 152, 152, 0.25);
 $shadow-lifted: 4px 4px 30px rgba(126, 126, 126, 0.25);
 
 $dark-shadow: 2px 2px 20px rgba(0, 0, 0, 0.3);
-$dark-shadow-lifted: 4px 4px 30px rgba(0, 0, 0, 0.3);
+$dark-shadow-lifted: 4px 4px 30px rgba(0, 0, 0, 0.35);
 
 $theme-transition: background-color 300ms ease-in-out;
 
